remove triggered fixes